refactor: /users endpoints
